Fix homepage on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body::before {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  opacity: 0.2;
+  opacity: 0.075;
   background-repeat: no-repeat;
 }
  
@@ -47,8 +47,6 @@ body::before {
   background-repeat: no-repeat, repeat;
   background-position: right center;
   background-size:contain;
-  /* background-attachment: fixed; */
-
 }
  
 #tagline-wrapper {
@@ -124,6 +122,7 @@ body::before {
   justify-content: space-between;
   background-color: #ff2a6d;
   width: 100vw;
+  z-index: 1000;
 }
 
 .statistic {
@@ -179,7 +178,6 @@ body::before {
   left: 0;
   animation: slide-left 150ms;
 }
-
 
 .menu_btn {
   display: none;
@@ -554,8 +552,14 @@ input[name='panel']:checked + .issue-content {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
-
 /* Issues end */
+
+/* Picture resize for image */
+.fit-img{
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
 
 /* Importance */
 *{
@@ -628,40 +632,6 @@ input[name='panel']:checked + .issue-content {
 }
 /*Importance End*/
 
-/* Personal Protection Style */
-/* div#boxleft-shape{
-  position: absolute;
-  background: rgb(51, 51, 51);
-  left: 0px;
-  width: 50%;
-  height: 350px;
-  transition: transform 0.7s ease-in-out;
-}
-
-div#boxright-shape{
-  position: absolute;
-  background: rgb(51, 51, 51);  
-  border-radius: 20px;
-  right: 0px;
-  width: 50%;
-  height: 400px;
-  transition: transform 0.7s ease-in-out;
-}
-
-div#circle-shape{
-  position: absolute;
-  background: #ff2a4d;  
-  border-radius: 75px;
-  cursor: pointer;
-  width: 300px;
-  height: 300px;
-  transition: transform .7s ease-in-out;
-}
-
-div#circle-shape:hover{
-  background-color: #ff5560;
-} */
-
 ul.protection-unordered{
   display: flex;
   font-size: 15px;
@@ -682,93 +652,6 @@ ul.protection-unordered{
   text-align: center;
   width: 50rem;
 }
-
-/* li#update-softwares{
-  scale: 0.01;
-  opacity: 0;
-}
-
-li#twofa{
-  scale: 0.01;
-  opacity: 0;
-}
-
-li#otp{
-  scale: 0.01;
-  opacity: 0;
-}
-
-li#strong-pass{
-  scale: 0.01;
-  opacity: 0;
-}
-
-.move-right{
-  transform: translateX(50vw);
-}
-
-.move-left{
-  transform: translateX(-50vw);
-}
-
-.move-left-circle{
-  transform: translateX(-55vw) rotate(360deg);
-}
-
-.rotate{
-  transform: rotate(360deg);
-}
-
-.animation-scaleup1{
-  animation: scaleup .5s ease-in-out forwards;
-}
-.animation-scaleup2{
-  animation: scaleup .6s ease-in-out forwards;
-}
-.animation-scaleup3{
-  animation: scaleup .7s ease-in-out forwards;
-}
-.animation-scaleup4{
-  animation: scaleup .8s ease-in-out forwards;
-}
-
-.animation-scaledown1{
-  animation: scaledown .5s ease-in-out forwards;
-}
-.animation-scaledown2{
-  animation: scaledown .6s ease-in-out forwards;
-}
-.animation-scaledown3{
-  animation: scaledown .7s ease-in-out forwards;
-}
-.animation-scaledown4{
-  animation: scaledown .8s ease-in-out forwards;
-}
-
-@keyframes scaleup{
-  0%{
-    opacity: 0;
-    scale: 0.01;
-  }
-
-  100%{
-    opacity: 1;
-    scale: 1;
-  }
-}
-
-@keyframes scaledown{
-  0%{
-    opacity: 1;
-    scale: 1;
-  }
-
-  100%{
-    opacity: 0;
-    scale: 0.01;
-  }
-} */
-
 
 /* Footer */
 footer {
@@ -804,18 +687,6 @@ footer p {
 
 #importance .section-content {
   align-items: start;
-}
-
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 #ff2a4d;
-  }
-  70% {
-    box-shadow: 0 0 0 2rem rgba(115, 138, 144, 0);
-  }
-  100% {
-    box-shadow: 0 0 0 0 rgba(115, 138, 144, 0);
-  }
 }
 
 /* Devices from 993px to 1200px (inclusive) */
@@ -910,20 +781,22 @@ footer p {
     right: 5em;
   }
 
-/* home tagline */
+  /* Home tagline */
   #tagline{
     color: #ff2a6d;
     font-size: 10rem;
     display: inline-block;
-    /* text-align: center; */
   }
+
   .glitch{
     font-size: 10rem;
   }
+
   #last-bullet{
     margin-bottom: -10vh;
   }
-  /*  importance of digital privacy */
+
+  /* Importance of digital privacy */
   .card{
     background-color:  #f07dea;
   }
@@ -960,7 +833,6 @@ footer p {
     text-shadow: 0.1rem 0.1rem #05d9e8;
   }
 
-
   .protection-unordered {
     flex-direction: column;
   }
@@ -974,6 +846,25 @@ footer p {
 
 /* Devices from 0px to 768px (inclusive) */
 @media (max-width: 768px) {
+  #eyelids {
+    border-radius: 37.5rem 0;
+    width: 25rem;
+    height: 22.5rem;
+    margin-left: 10rem;
+  }
+  #eyeball {
+    border-width: 2rem;
+    height: 8.5rem;
+    width: 8.5rem;
+  }
+
+  #tagline {
+    line-height: 10rem;
+    font-size: 5rem;
+  }
+  .glitch{
+    font-size: 5rem;
+  }
 /* Bullets for Effects of Data Breach */
   dl {
     columns: 1;
@@ -983,7 +874,6 @@ footer p {
     color: #05d0e8;
     font-family: "Montserrat", sans-serif;
     font-size: 2.5rem;
-
   }
   
   dt::before {
@@ -997,24 +887,15 @@ footer p {
     margin-bottom: 5vh;
   }
 
-/* Picture resize for image */
-
-  .fit-img{
-    max-width: 100%;
-    max-height: 100vh;
-    margin: auto;
-        
+  /* Cards resize */
+  .card-wrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
-/* Cards resize */
 
-.card-wrapper{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  
-}
   .card-blur {
     margin: 1rem;
     padding: 1.0rem;
@@ -1023,16 +904,16 @@ footer p {
     font-size: 2rem;
   }
 
-
   .glitch{
     font-size: -0.5em;
   }
+
   .issues-label {
     font-size: 2.5rem;
     border-bottom: .5rem solid #4c97e2;
     color: #ff2a6d;
-    
   }
+
   .drop-down-arrow {
     border: 0.5rem solid #ff2a6d;
     border-width: 0 1rem 1rem 0;
@@ -1046,10 +927,20 @@ footer p {
   dl {
     padding-top: 4vw;
     padding-bottom: 2vw;
-    
   }
 }
 
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 #ff2a4d;
+  }
+  70% {
+    box-shadow: 0 0 0 2rem rgba(115, 138, 144, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(115, 138, 144, 0);
+  }
+}
 
 @keyframes glitch {
   0% {
